--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <div class="header">
+        <div class="logo">Header Logo</div>
+            <ul class="link-list">
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Projects</a></li>
+            </ul>
+    </div>
     
 </body>
 </html>
