Added Hero Section and started to style

--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
             </ul>
     </div>
     
+    <div class="hero">
+        <div class="hero-text">
+        <h1 class="hero-header">This Website is awesome</h1>
+        <p class="hero-secondary">This Website has some subtext that goes under the main title. It is a smaller font and the color is lower contrast.</p>
+        <button class="hero-btn">Sign up</button>
+    </div>
+
+    <div class="hero-img">This is a placeholder for an Image</div>
+    </div>
 </body>
 </html>
