--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="logo">Header Logo</div>
             <ul class="link-list">
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">About me</a></li>
             </ul>
     </div>
     
