--- a/index.html
+++ b/index.html
@@ -25,5 +25,47 @@
 
     <div class="hero-img">This is a placeholder for an Image</div>
     </div>
+
+    <div class="info">
+        <h2>Some random Information.</h2>
+        <div class="collection">
+        <div class="card">
+            <div class="icon"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <div class="icon"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <div class="icon"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="card">
+            <div class="icon"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+    </div>
+    </div>
+
+    <div class="quote">
+        <blockquote class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+        <cite class="quote-cit">- Thor, God of Thunder</cite>
+    </div>
+
+    
+    <div class="cta">
+        <div class="cta-text">
+            <div class="cta-container">
+            <h3 class="cta-heading">Call to action! It's time!</h3>
+            <p class="cta-heading-text">Sign up for our product by clicking that button right over there!</p>
+        </div>
+            <button class="cta-btn">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer-txt">Copyright © The Odin Project 2024</div>
+    </div>
 </body>
 </html>
